--- a/portfolio/src/components/header/header.css
+++ b/portfolio/src/components/header/header.css
@@ -86,4 +86,9 @@ header{
     .scroll_down{
         display: none;
     }
+    .me{
+            width: 18rem;
+            height: 80rem;
+            margin-top: 2rem;
+        }
   }
