--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -63,7 +63,7 @@ body{
 
  section{
     margin-top: 8rem;
-    height: 100vh;
+    
  }
 
  section > h2,
@@ -134,10 +134,12 @@ body{
 
  /*===========MEDIA QUERIES(SMALL DEVICES)=============*/
  @media screen and (max-width: 600px){
-    .container{
-        width: var(--container-width-md)
-    }
-    section > h2{
-        margin-bottom: 2rem;
-    }
+   .experience__container{
+      gap: 1rem;
+   }
+.experience__container > div{
+   width: 100%;
+   padding: 2rem 1rem;
+}
+
  }
