implemented clubs and activities component

--- a/portfolio/src/components/experience/experience.css
+++ b/portfolio/src/components/experience/experience.css
@@ -60,6 +60,12 @@
   /*============== MEDIA QUERIES(SMALL DEVICES) ====================*/
 
   @media screen and (max-width: 600px){
-     
-  
-  }
+    .experience__container{
+        gap: 1rem;
+        
+    }
+    .experience__container >div{
+        padding: 2rem 1rem;
+        width: 80%;
+    }
+}
