--- a/portfolio/src/components/header/header.css
+++ b/portfolio/src/components/header/header.css
@@ -10,6 +10,10 @@ header{
     position: relative;
 }
 
+.text-invisible{
+    visibility: hidden;
+}
+
 /*==============CTA====================*/
 
 .cta{
